# major-bloodnok

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/major_bloodnok/: __init__.py  __main__.py
src/major_bloodnok/cli/: __init__.py  db.py  server.py
src/major_bloodnok/frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
src/major_bloodnok/frontend/src/: App.svelte  global.d.ts
src/major_bloodnok/frontend/src/components/: CategoryTreeItem.svelte  Chart.svelte  MainNav.svelte  MainNavItem.svelte  NavItem.svelte  Transaction.svelte
src/major_bloodnok/frontend/src/routes/: Account.svelte  AccountAnalysis.svelte  AccountCategorise.svelte  AccountClassify.svelte  AccountTransactions.svelte  AccountUpload.svelte  Categories.svelte  Dashboard.svelte
src/major_bloodnok/frontend/src/store/: analysis.ts  categories.ts  dashboard.ts  index.ts  transactions.ts
src/major_bloodnok/models/: __init__.py  category.py  meta.py  rule.py  transaction.py
src/major_bloodnok/server/: __init__.py  api.py  frontend.py
